--- a/ejs/new.ejs
+++ b/ejs/new.ejs
@@ -1,4 +1,16 @@
 <% include header.ejs %>
+
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="/MoboTech/">MoboTech</a>
+			</div>
+			<ul class="nav navbar-nav">
+				<li><a href="/MoboTech/new"> Add Tech </a></li>
+			</ul>
+		</div>
+	</nav>
+	
 	<link rel="stylesheet" href="../css/index.css">
 	<link rel="stylesheet" href="../css/new.css">
 	<div class="container">
@@ -15,7 +27,7 @@
 				<input class="form-control" placeholder="Enter Image URL" name="image">
 			</div>
 			<div class="form-group">
-				<label>Image Description :</label>
+				<label>Description :</label>
 				<textarea class="form-control" placeholder="Enter Description" name="description"  rows="10"></textarea>
 			</div>
 			<div class="form-group tac">
